--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <p> hi my name is caleb <a href="caleb">caleb</a></p>
+        <p> hi my name is caleb  i love my self <a href="caleb">caleb</a></p>
     </div>
 </body>
 </html>
